# hum

./: .vestibular  CLAUDE.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  compile-synthdefs.scd  ghostinstrument.cog  hum.dict  piece.hum  project.md  test-ir-piece.hum
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  VISION-v3-v4.md  v2-IR-DESIGN.md  v2-PIPE-LANG.md  v3-DICTIONARY-SYNC.md
.planning/phases/01-audio-core/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-VERIFICATION.md
.planning/phases/01-osc-bridge/: 01-1-SUMMARY.md  01-2-SUMMARY.md  01-CONTEXT.md  01-PLAN-1.md  01-PLAN-2.md
.planning/phases/02-canvas-cross-compile/: 02-01-PLAN.md  02-02-PLAN.md  02-CONTEXT.md  02-RESEARCH.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  MAKEPAD-VS-GPUI.md  PITFALLS.md  STACK.md  SUMMARY.md
pieces/: arabian-night-of-the-alien.hum  daft punk touched my tits.hum
pieces/daft-punk-tits-sc/: bass.scd  chords.scd  clap.scd  dnb-break.scd  guitarra.scd  kick.scd  melody.scd  melt.scd  vox-chop.scd
scripts/: hum-server.sh  start-scsynth.ps1
src/: assistant.rs  config.rs  dict.rs  events.rs  instruments.rs  main.rs  reconciler.rs  stage.rs  state.rs  timeline.rs  transport.rs  watch.rs  watcher.rs
src/ir/: buffer.rs  compiler.rs  encoder.rs  mod.rs  notes.rs  ref_resolver.rs  sequencer.rs  types.rs
src/osc/: bridge.rs  error.rs  mod.rs
src/parser/: error.rs  mod.rs  types.rs
src/pipe/: executor.rs  mod.rs  parser.rs  types.rs
src/scd/: mod.rs  store.rs
test-data/: sine_test.scsyndef
(+79 files in other folders)
