[package]
name = "hum-rt"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"

[features]
hum-gui = ["dep:gpui", "dep:portable-pty"]
default = ["hum-gui"]

[dependencies]
rosc = "0.11"
toml = "0.8"
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
thiserror = "2.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
dirs = "5"
serde-saphyr = "0.0.22"
indexmap = { version = "2", features = ["serde"] }
notify = "7"
notify-debouncer-full = "0.4"
serde_json = "1"
gpui = { version = "0.2", optional = true }
regex = "1.12.3"
makepad-widgets = "1.0"
portable-pty = { version = "0.8", optional = true }
cpal = "0.17"
fundsp = { version = "0.23", default-features = false, features = ["std"] }
crossbeam-channel = "0.5"

[[bin]]
name = "hum-gui"
path = "src/bin/gui/main.rs"
required-features = ["hum-gui"]

[[bin]]
name = "ghostinstrument"
path = "src/bin/ghostinstrument/main.rs"

[dev-dependencies]
tempfile = "3"
